# FPDS

./: .env.dev.example  .env.prod.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.githooks/: pre-commit
api/: README.md
api/service/: README.md  pyproject.toml
api/service/api_service/: __init__.py  aggregate_refresh.py  aggregate_refresh_runner.py  audit_log.py  auth.py  bootstrap_admin_user.py  candidate_auto_promotion.py  candidate_safety_remediation.py  change_history.py  config.py  db.py  errors.py  llm_usage.py  main.py  models.py  product_types.py  public_common.py  public_dashboard.py  public_products.py  review_detail.py  review_diagnosis.py  review_queue.py  run_retry.py  run_status.py  security.py  source_catalog.py  source_catalog_collection_runner.py  source_collection_runner.py  source_registry.py  source_registry_utils.py
api/service/fpds_admin_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/service/tests/: __init__.py  test_aggregate_refresh.py  test_audit_log.py  test_auth.py  test_candidate_auto_promotion.py  test_candidate_safety_remediation.py  test_change_history.py  test_config.py  test_llm_usage.py  test_ops_scenario_qa.py  test_product_types.py  test_public_dashboard.py  test_public_products.py  test_review_detail.py  test_review_detail_route.py  test_review_queue.py  test_run_retry.py  test_run_status.py  test_security.py  test_source_catalog.py  test_source_catalog_collection_runner.py  test_source_collection_runner.py  test_source_registry.py  test_source_scope_safety.py
api/service/tests/regression/: README.md
(+1009 files in other folders)
