[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fpds-worker"
version = "0.1.0"
description = "FPDS worker pipeline baseline for discovery, snapshot, parsing, and chunking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "pypdf>=5,<7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["worker*"]
