[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fpds-admin-api"
version = "0.1.0"
description = "FPDS FastAPI admin auth and session service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "uvicorn>=0.30,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api_service*"]
